--- a/templates/500.html
+++ b/templates/500.html
@@ -1,7 +1,15 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block extra_title %} 500 {% endblock %}
+{% block extra_title %} | 500 {% endblock %}
+
+{% block page_header %}
+    <div class="container header-container">
+        <div class="row">
+            <div class="col"></div>
+        </div>
+    </div>
+{% endblock %}
 
 {% block content %}
     <div class="container">
