Fix path route for parallax images

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -276,7 +276,7 @@ button {
 }
 
 .parallax-3 {
-    background-image: url("../media/eilatdolphinreef.jpg");
+    background-image: url("../../media/eilatdolphinreef.jpg");
 
     min-height: 100%;
 
@@ -287,7 +287,7 @@ button {
 }
 
 .parallax-4 {
-    background-image: url("../media/caribbeanreefsquid.jpg");
+    background-image: url("../../media/caribbeanreefsquid.jpg");
 
     min-height: 100%;
 
