--- a/blog/templates/blog/add_post.html
+++ b/blog/templates/blog/add_post.html
@@ -21,7 +21,7 @@
 {% block content %}
 <div class="container">
     <div class="row">
-        <div class="col-12">
+        <div class="col-12 margin-custom">
             <div class="m-auto main-container">
                 <h2 class="create-blog-head">Create a blog post</h2>
                 <form action="{% url 'add_post' %}" method="POST">
