--- a/donations/templates/donations/donation_success.html
+++ b/donations/templates/donations/donation_success.html
@@ -33,9 +33,8 @@
 		</div>
 		<figure>
 			<figcaption><strong>Look how happy you've made this happy chappy!</strong></figcaption>
-			<img src="/workspace/MS4_White_Whale_Fundraising/media/happyfish.jpeg" alt="A happy fish sarcastic">
+			<img src="/media/happyfish.jpeg" alt="A happy fish sarcastic">
 		</figure>
-		/workspace/MS4_White_Whale_Fundraising/media/happyfish.jpeg
 	</div>
 
 {% endblock content %}
