--- a/donations/templates/donations/donation_success.html
+++ b/donations/templates/donations/donation_success.html
@@ -33,7 +33,7 @@
 		</div>
 		<figure>
 			<figcaption><strong>Look how happy you've made this happy chappy!</strong></figcaption>
-			<img src="{% static 'media/happyfish.jpeg' %}" alt="A happy fish sarcastic">
+			<img src="{% static '/happyfish.jpeg' %}" alt="A happy fish sarcastic">
 		</figure>
 	</div>
 
