--- a/donations/templates/donations/donation_success.html
+++ b/donations/templates/donations/donation_success.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load media %}
 
 {% block extra_css %}
     <link rel="stylesheet" href="{% static 'donations/css/donations.css' %}">
