Adds a slash to the fish url

--- a/donations/templates/donations/donation_success.html
+++ b/donations/templates/donations/donation_success.html
@@ -33,7 +33,7 @@
 		</div>
 		<figure>
 			<figcaption><strong>Look how happy you've made this happy chappy!</strong></figcaption>
-			<img src="{{ MEDIA_URL }}happyfish.jpeg" alt="A happy fish sarcastic">
+			<img src="{{ MEDIA_URL }}/happyfish.jpeg" alt="A happy fish sarcastic">
 		</figure>
 	</div>
 	s3://jdvt29-white-whale-fundraising/media/happyfish.jpeg
